Fix: update z-index

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -49,7 +49,7 @@ body {
     width: 100%;
     max-width: 1600px !important;
     background-color: var(--primary);
-    z-index: 99999;
+    z-index: 1060;
 }
 
 .menu-area .container.scroll {
